# alfabank-bot

./: .gitignore  README.md  bot_commands.py  constants.py  main.py  pyproject.toml
controller/: funcs.py  initialize.py  main.py  register.py
model/: helper.py  table.py
view/: text.py
