[tool.poetry]
name = "alfabank-bot"
version = "0.1.0"
description = ""
authors = ["AlienFoun <alienfoun@gmail.com>"]
readme = "README.md"
packages = [{include = "alfabank_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.99.0"
oauth2client = "^4.1.3"
pygsheets = "^2.0.6"
python-dotenv = "^1.0.0"
aiogram = "2.25.1"
loguru = "^0.7.2"
notifiers = "^1.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
